changed to my docker hub

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,16 @@ services:
   mssql-db:
     image: mcr.microsoft.com/mssql/server
     ports:
-      - 62000:1433
+      - 12000:1433
     environment: 
       ACCEPT_EULA: Y
       SA_PASSWORD: "HelloW0rld"
   
   application:
-    image: boulundeasv/workouter
+    image: tr0els/workouter
     environment: 
       ASPNETCORE_ENVIRONMENT: Development
     depends_on: 
       - mssql-db
     ports: 
-      - 61000:80
+      - 11000:80
