--- a/db/flyway.conf
+++ b/db/flyway.conf
@@ -1,4 +1,4 @@
-flyway.url=jdbc:sqlserver://mssql-db;databaseName=Workouter
+flyway.url=jdbc:sqlserver://db;databaseName=Workouter
 flyway.user=sa
 flyway.password=HelloW0rld
 flyway.connectRetries=50
