--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,7 @@ services:
       - 12000:1433
     environment: 
       ACCEPT_EULA: Y
-      SA_PASSWORD: "HelloW0rld"
-      // MYSQL_DATABASE: ContactBook
+      SA_PASSWORD: HelloW0rld
     volumes:
       - ./db/data:/var/opt/sqlserver
   
