--- a/db/flyway.conf
+++ b/db/flyway.conf
@@ -1,4 +1,4 @@
-flyway.url=jdbc:sqlserver://mssql
+flyway.url=jdbc:sqlserver://mssql;databaseName=master
 flyway.user=sa
 flyway.password=HelloW0rld
 flyway.connectRetries=50
